--- a/www.nass.gov.ng/69b1a54aa638ff138e9777d0b639c88d194c578a.yml
+++ b/www.nass.gov.ng/69b1a54aa638ff138e9777d0b639c88d194c578a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 18:59:17 GMT
+    - Wed, 28 Mar 2018 04:06:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1RDCh4UhH5yTKeYlcPWM53; path=/
+    - PHPSESSID=nM485z%2CvteM1i6RKIL-ir1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 18:59:17 GMT
+recorded_at: Wed, 28 Mar 2018 04:06:10 GMT
