200 OK http://www.nass.gov.ng/mp/profile/632

--- a/www.nass.gov.ng/5f7e182f93236398013f1906aab476a60bc043c1.yml
+++ b/www.nass.gov.ng/5f7e182f93236398013f1906aab476a60bc043c1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 19:12:24 GMT
+    - Wed, 28 Mar 2018 04:19:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iCTXYVy6M5qIBz4jluw%2Ch3; path=/
+    - PHPSESSID=VLkj7SBghuk5eQKMkAIKL3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 19:12:24 GMT
+recorded_at: Wed, 28 Mar 2018 04:19:54 GMT
