--- a/www.nass.gov.ng/f17c9051724ae34ddcc104d3ad5c8686ca7469c8.yml
+++ b/www.nass.gov.ng/f17c9051724ae34ddcc104d3ad5c8686ca7469c8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 19:21:48 GMT
+    - Wed, 28 Mar 2018 04:30:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=x%2CnTAKRiiTOzQfB20eBGq0; path=/
+    - PHPSESSID=avqDdl73B3E7z2Zlt%2Ct8I3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 19:21:48 GMT
+recorded_at: Wed, 28 Mar 2018 04:30:01 GMT
