--- a/www.nass.gov.ng/70ad86e9f44c15d1f096c47097bee16f9af54608.yml
+++ b/www.nass.gov.ng/70ad86e9f44c15d1f096c47097bee16f9af54608.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 19:28:41 GMT
+    - Wed, 28 Mar 2018 04:36:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UFqqiZO8uHMA%2CAQGbYZZm3; path=/
+    - PHPSESSID=oU1eIdOfM3FBAxiGpYabT3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 19:28:41 GMT
+recorded_at: Wed, 28 Mar 2018 04:36:57 GMT
