--- a/www.nass.gov.ng/bf932b469691d5a5f9ba244070a3e0cdd81b4ea1.yml
+++ b/www.nass.gov.ng/bf932b469691d5a5f9ba244070a3e0cdd81b4ea1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 19:29:53 GMT
+    - Wed, 28 Mar 2018 04:38:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SFZq%2CFBT1vCd6DuEuBUKZ3; path=/
+    - PHPSESSID=NXKeOWJjNWFVlTVyI9v9D0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 19:29:53 GMT
+recorded_at: Wed, 28 Mar 2018 04:38:11 GMT
