--- a/www.nass.gov.ng/f19366f7fb5112efeee244b98da420d87ddd7414.yml
+++ b/www.nass.gov.ng/f19366f7fb5112efeee244b98da420d87ddd7414.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 19:30:40 GMT
+    - Wed, 28 Mar 2018 04:38:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DRRWEpaLx2gwM1K2UHKwy3; path=/
+    - PHPSESSID=hz%2CB076cfmnuLQW95QMjA2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 19:30:40 GMT
+recorded_at: Wed, 28 Mar 2018 04:38:28 GMT
