--- a/www.nass.gov.ng/eabb9d2ca0da5a52b2eb24d40c88eea8c4845cbe.yml
+++ b/www.nass.gov.ng/eabb9d2ca0da5a52b2eb24d40c88eea8c4845cbe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 19:34:24 GMT
+    - Wed, 28 Mar 2018 04:41:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vHvhXRT2AQZRb8PZ5o3ZD1; path=/
+    - PHPSESSID=iAIfmdiSI9%2CoMyVYqNnnO1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 19:34:24 GMT
+recorded_at: Wed, 28 Mar 2018 04:41:48 GMT
