--- a/www.nass.gov.ng/2e773a4beaf0ae4a9cc18025f3a20d0184145e34.yml
+++ b/www.nass.gov.ng/2e773a4beaf0ae4a9cc18025f3a20d0184145e34.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 19:41:16 GMT
+    - Wed, 28 Mar 2018 04:45:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PZ9dTFXCyGi%2CJDYReL6zU2; path=/
+    - PHPSESSID=emkd8g57BwpP6j8VfsinZ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 19:41:16 GMT
+recorded_at: Wed, 28 Mar 2018 04:45:59 GMT
