--- a/www.nass.gov.ng/70addde23cf6668cb27ce9e8e830467349174ca6.yml
+++ b/www.nass.gov.ng/70addde23cf6668cb27ce9e8e830467349174ca6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 19:50:04 GMT
+    - Wed, 28 Mar 2018 04:55:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5uzQ04LAE30rYkj1E86Tu2; path=/
+    - PHPSESSID=%2Cdf7zrbBR9F9aGssp2%2CNd1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 19:50:04 GMT
+recorded_at: Wed, 28 Mar 2018 04:55:51 GMT
