--- a/www.nass.gov.ng/a5edadbf6e4614a35c7079335c90f7e7f0c78fbc.yml
+++ b/www.nass.gov.ng/a5edadbf6e4614a35c7079335c90f7e7f0c78fbc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 20:00:00 GMT
+    - Wed, 28 Mar 2018 05:05:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ixjWR1qIPuI%2CYkpLZA6ZK3; path=/
+    - PHPSESSID=z2Ce3cfHL52FPXZhcBokx2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 20:00:00 GMT
+recorded_at: Wed, 28 Mar 2018 05:05:38 GMT
