200 OK http://www.nass.gov.ng/mp/profile/741

--- a/www.nass.gov.ng/097917a439e90b8c2a4e796e20254a51fd185aef.yml
+++ b/www.nass.gov.ng/097917a439e90b8c2a4e796e20254a51fd185aef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 20:02:17 GMT
+    - Wed, 28 Mar 2018 05:07:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mz0zIXSaYdOWXNNHJcg3f1; path=/
+    - PHPSESSID=McH6%2CyPC3r0-RzWJmbWBc3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 20:02:17 GMT
+recorded_at: Wed, 28 Mar 2018 05:07:34 GMT
