--- a/www.nass.gov.ng/977469a30e58cd721444b24dc3ed3ab4ffe397cc.yml
+++ b/www.nass.gov.ng/977469a30e58cd721444b24dc3ed3ab4ffe397cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 20:17:55 GMT
+    - Wed, 28 Mar 2018 05:24:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rsynXD%2CChRUEdkOoS7zxE2; path=/
+    - PHPSESSID=dDmJJY6gGMAClLcbQXEuT2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 20:17:55 GMT
+recorded_at: Wed, 28 Mar 2018 05:24:01 GMT
