--- a/www.nass.gov.ng/476351f6a5eecbf00fae19c0b77f078271524ad2.yml
+++ b/www.nass.gov.ng/476351f6a5eecbf00fae19c0b77f078271524ad2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 20:28:28 GMT
+    - Wed, 28 Mar 2018 05:34:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=20k5iXE7Wi-2caBeEyivR0; path=/
+    - PHPSESSID=U2TQ9bTMVhR8A%2Cd-w107X3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 20:28:28 GMT
+recorded_at: Wed, 28 Mar 2018 05:34:28 GMT
