--- a/www.nass.gov.ng/f967d70812a594c54f3aa36da7155b3b13979257.yml
+++ b/www.nass.gov.ng/f967d70812a594c54f3aa36da7155b3b13979257.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 20:33:05 GMT
+    - Wed, 28 Mar 2018 05:39:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iPyXSxE18OK0bG77t%2C-t53; path=/
+    - PHPSESSID=Ixiogr%2CG8g0DvxI%2Cp-tgd2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 20:33:05 GMT
+recorded_at: Wed, 28 Mar 2018 05:39:37 GMT
