200 OK http://www.nass.gov.ng/mp/profile/689

--- a/www.nass.gov.ng/d3189371c9f6b6d9d17e90ed15f220a29c1de43c.yml
+++ b/www.nass.gov.ng/d3189371c9f6b6d9d17e90ed15f220a29c1de43c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 21:27:03 GMT
+    - Wed, 28 Mar 2018 06:29:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=P%2CdedlSWXJ%2CkZWU4XtPj82; path=/
+    - PHPSESSID=1y%2CyLACNRzNBlRs%2CKxAoI1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 21:27:03 GMT
+recorded_at: Wed, 28 Mar 2018 06:29:43 GMT
