200 OK http://www.nass.gov.ng/mp/profile/342

--- a/www.nass.gov.ng/25e90f8b2b68218038c54dba2b366a0c707d2407.yml
+++ b/www.nass.gov.ng/25e90f8b2b68218038c54dba2b366a0c707d2407.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:53:37 GMT
+    - Fri, 30 Mar 2018 17:15:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pf4K90svk3LASMuixNrwb1; path=/
+    - PHPSESSID=mlo7%2Cohe5aRIp8Vqh-Q193; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:53:37 GMT
+recorded_at: Fri, 30 Mar 2018 17:15:03 GMT
