200 OK https://www.nass.gov.ng/mp/profile/775

--- a/www.nass.gov.ng/e712e75fdc8933a8dd5fa5ef4f97663bb16a3417.yml
+++ b/www.nass.gov.ng/e712e75fdc8933a8dd5fa5ef4f97663bb16a3417.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:12:26 GMT
+    - Fri, 10 Aug 2018 23:04:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JZZY3zXl5K5wMB2cMCJi%2C3; path=/
+    - PHPSESSID=V%2C147ghQuIZ-YiQ3HdYD83; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:12:26 GMT
+recorded_at: Fri, 10 Aug 2018 23:04:53 GMT
