200 OK https://www.nass.gov.ng/mp/profile/728

--- a/www.nass.gov.ng/d50c45832c2d21e004a2f5ecf8edaac5f66fb825.yml
+++ b/www.nass.gov.ng/d50c45832c2d21e004a2f5ecf8edaac5f66fb825.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 08:43:13 GMT
+    - Fri, 10 Aug 2018 23:28:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hd4gdUEoZtdHr0EL7TbvW1; path=/
+    - PHPSESSID=9ACadYb2Wno0NzCabiK%2C%2C0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 08:43:13 GMT
+recorded_at: Fri, 10 Aug 2018 23:28:46 GMT
