200 OK https://www.nass.gov.ng/mp/profile/887

--- a/www.nass.gov.ng/898dc337791e366e279ca3e600675e353c379f75.yml
+++ b/www.nass.gov.ng/898dc337791e366e279ca3e600675e353c379f75.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 11:19:40 GMT
+    - Sat, 11 Aug 2018 01:55:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=36T5SB2IQzq66kqGitMhu1; path=/
+    - PHPSESSID=JNtNAwAW%2CfJQ4U4JpBEEo2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 11:19:40 GMT
+recorded_at: Sat, 11 Aug 2018 01:55:16 GMT
