200 OK https://www.nass.gov.ng/mp/profile/685

--- a/www.nass.gov.ng/ab5c24d6044cf5e7c899c6b85388c75f17610cca.yml
+++ b/www.nass.gov.ng/ab5c24d6044cf5e7c899c6b85388c75f17610cca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:06:47 GMT
+    - Sat, 11 Aug 2018 08:48:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wK0T8%2CwGLSaL4K85OSdCm2; path=/
+    - PHPSESSID=j4Du9hZd3e6eq6igMu8X73; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:06:47 GMT
+recorded_at: Sat, 11 Aug 2018 08:48:35 GMT
